--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -16,7 +16,7 @@ Největší díky však patří github uživateli \textit{mstevenson}, jehož pr
 
 \section{Implementace základních komponent}
 
-Objektový návrh základních entit našeho systému již známe z předchozí kapitoly. Zde si podrobně nastíníme implementaci \textbf{šermíře} a jeho \textbf{meče} - nejprve vnitřní implementaci šermíře, potom meče, následně kosmetickou stránku šermíře (od jeho interního fungování existuje víceméně odděleně) a nakonec toto vše protkáme damage systémem. 
+Objektový návrh základních entit našeho systému již známe z předchozí kapitoly. Zde si podrobně nastíníme implementaci \textbf{šermíře} a jeho \textbf{meče} - nejprve vnitřní implementaci šermíře, potom meče, následně kosmetickou stránku šermíře (ta operuje víceméně odděleně od jeho základního fungování) a nakonec toto vše protkáme damage systémem. 
 
 Vynecháme algoritmy jednotlivých modulů ovládání - ty jsme již podrobně nastínili v \ref{interfacesSwordMovementModulesSubsection} - a rovněž pro objekt kořenu hierarchie je implementace natolik přímočará, že se jím zde nebudeme zaobírat. 
 
@@ -167,7 +167,9 @@ Neméně důležitá je však stránka kosmetická - šermířův 3D model a ani
 
 \subsection{Meč}
 
+Meč je herní objekt, který slouží jako šermířův nástroj (násilné) interakce s okolím. Jedním z hlavních předsevzetí naší práce bylo implementovat ho jako objekt ovládaný plně skrze fyzikální systém - schopný působit silami na ostatní objekty a realisticky reagovat na síly, jež působí na něj.
 
+Jeho chování by mělo odpovídat tomu, že je šermířem uchopen v nějakém dobře definovaném bodě svého těla - ideálně na rukojeti. Kolem tohoto bodu by mělo být možné meč libovolně rotovat ve všech třech stupních volnosti. Tři stupně volnosti by měly být umožněny i pro lineární pohyb celého meče spolu s jeho bodem úchopu v prostoru. Veškeré tyto změny své polohy by měl vykonávat realisticky plynule působením síly v průběhu času.
 
 \begin{itemize}
   \item zákl. prvky: Rigidbody (nekinematické), ConfigurableJoint, SwordMovement
