--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -245,7 +245,7 @@ Algoritmus probíhá takto:
  
 Výsledkem je meč, který šermíř drží v jednom bodě\footnote{To není problém - nic nám nebrání umístit bod, ve kterém ho šermíř drží, např. do volného prostoru pod mečem, čímž dosáhneme vizuálního dojmu, že šermíř mečem mává plnohodnotně.} bodě a hráč má plnou svobodu jak s ním máchat. Čepel meče se natáčí automaticky tak, aby mířila ostrou hranou tam, kam šermíř seká.
 
-\subsubsection*{Mod pro blokování}
+\subsubsection*{Mod pro blokování} \label{interfacesSwordMovementBlockingModuleSubsubsection}
 
 Mod pro blokování je o poznání složitější.
 
