--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -1,3 +1,4 @@
+
 @software{Unity,
   author = {{Unity Technologies}},
   title = {Unity Engine},
@@ -35,9 +36,17 @@
 
 @misc{InvertReverseUIMask,
   author       = {{glitchers}},
-  title        = {thread: Invert/Reverse UI Mask},
+  title        = {forum thread: Invert/Reverse UI Mask},
   url         =  {https://answers.unity.com/questions/1066291/invertreverse-ui-mask.html},
   date         = {2023-03-25}
+}
+
+@software{Blender,
+  author = {Roosendaal, Ton and Blender Foundation},
+  title = {Blender},
+  url = {https://www.blender.org/},
+  version = {3.4},
+  date = {2022-13-07},
 }
 
 
@@ -47,6 +56,7 @@
   url = {https://www.gog.com/game/die_by_the_sword_expansion},
   date = {1998-02-28},
 }
+
 
 @software{MountAndBlade,
   author = {{TaleWorlds Entertainment}},
